Todas las páginas deberán tener un menú de navegación el cuál, permite al usuario navegar de una manera clara y sencilla entre todas las páginas HTML, tanto la principal como la secundaria.

--- a/html/autos.html
+++ b/html/autos.html
@@ -6,7 +6,7 @@
     <title>Autos</title>
 </head>
 <body style="background-image: url(../imagenes/fondoautos1.jpg);background-size: cover;">
-    <!--<header class="logo">
+    <!--<header class="logo">-->
         <img src="../imagenes/autos.jpg">
          <nav>
                <ul style="color: yellowgreen;">
@@ -20,8 +20,8 @@
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
                </ul>
          </nav>
-    </header>
-    <section>
+    <!--</header>-->
+    <!--<section>
         <article style="color: white;">
             <h1 style="text-align: center;">Autos de lujo</h1>
             <p>Hay vehículos exclusivos en el modo individual que no hacen aparición en GTA Online y viceversa. Como también se han añadido una gran cantidad de deportivos como el Jester y superdeportivos como el Zentorno. Hasta la Actualización Dinero Sucio Parte 2 los siguientes vehículos que serán lanzados ya no estarán disponibles en modo campaña.
