--- a/html/videosDeLaComunidad.html
+++ b/html/videosDeLaComunidad.html
@@ -6,7 +6,7 @@
     <title>Videos de la comunidad</title>
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
-    <!--<header class="logo">
+    <!--<header class="logo">-->
         <img src="../imagenes/videos.png">
          <nav>
                <ul style="color: yellowgreen;">
@@ -20,8 +20,8 @@
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
                </ul>
          </nav>
-    </header>
-    <section>
+    <!--</header>-->
+    <!--<section>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/K8mR9H804-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section>
