--- a/html/actividades.html
+++ b/html/actividades.html
@@ -6,7 +6,7 @@
     <title>Actividades</title>
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
-    <!--<header class="logo">
+    <header class="logo">
         <img src="../imagenes/ActividadesLog.jpeg">
          <nav>
                <ul style="color: yellowgreen;">
@@ -21,7 +21,7 @@
                </ul>
          </nav>
     </header>
-    <footer style="color: white;">
+    <!--<footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
         <p>© Todos los derechos recervados</p>
