Todas las páginas *.html deben tener una etiqueta <header> la cuál, deberá contener una imagen (logo) relacionada al tema elegido.

--- a/html/autos.html
+++ b/html/autos.html
@@ -6,7 +6,7 @@
     <title>Autos</title>
 </head>
 <body style="background-image: url(../imagenes/fondoautos1.jpg);background-size: cover;">
-    <!--<header class="logo">-->
+    <header class="logo">
         <img src="../imagenes/autos.jpg">
          <nav>
                <ul style="color: yellowgreen;">
@@ -20,7 +20,7 @@
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
                </ul>
          </nav>
-    <!--</header>-->
+    </header>
     <!--<section>
         <article style="color: white;">
             <h1 style="text-align: center;">Autos de lujo</h1>
