--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Noticias GTAV</title>
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
-    <!--<header class="logo">-->
+    <header class="logo">
         <img src="../imagenes/GTA_V_logo.png" width="400" height="500">
          <nav>
                <ul style="color: yellowgreen;">
@@ -20,7 +20,7 @@
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
                </ul>
          </nav>
-    <!--</header>-->
+    </header>
     <!--<article>
         <h1 style="text-align: center;color: white;">GTAV Online</h1>
         <h2 style="text-align: left;color: white;">
