--- a/html/negocios.html
+++ b/html/negocios.html
@@ -6,7 +6,7 @@
     <title>Negocios</title>
 </head>
 <body style="background-image: url(../imagenes/Moteros.jpg);background-size: cover;">
-    <!--<header class="logo">-->
+    <header class="logo">
         <img src="../imagenes/negocios.jpg" width="500">
          <nav>
                <ul style="color: yellowgreen;">
@@ -20,7 +20,7 @@
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
                </ul>
          </nav>
-    <!--</header>-->
+    </header>
     <!--<footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: w;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
