Todas las páginas *.html deben tener una etiqueta <footer> la cuál, deberá tener la información del estudiante como nombres completos, organización, correo (usar hipervínculo, mailto), teléfono (usar hipervínculo, tel), además deberá tener el símbolo de copyright junto a la leyenda de “Todos los derechos reservados”. Por ejemplo, © Todos los derechos reservados

--- a/html/autos.html
+++ b/html/autos.html
@@ -21,7 +21,7 @@
                </ul>
          </nav>
     </header>
-    <!--<section>
+    <section>
         <article style="color: white;">
             <h1 style="text-align: center;">Autos de lujo</h1>
             <p>Hay vehículos exclusivos en el modo individual que no hacen aparición en GTA Online y viceversa. Como también se han añadido una gran cantidad de deportivos como el Jester y superdeportivos como el Zentorno. Hasta la Actualización Dinero Sucio Parte 2 los siguientes vehículos que serán lanzados ya no estarán disponibles en modo campaña.
@@ -46,6 +46,6 @@
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
         <p>© Todos los derechos recervados</p>
-    </footer>-->
+    </footer>
 </body>
 </html>
