--- a/html/videosDeLaComunidad.html
+++ b/html/videosDeLaComunidad.html
@@ -21,7 +21,7 @@
                </ul>
          </nav>
     </header>
-    <!--<section>
+    <section>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/K8mR9H804-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section>
@@ -31,6 +31,6 @@
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">:cpenaf@est.ups.edu.ec</a></p>
         <p>© Todos los derechos recervados</p>
-    </footer>-->
+    </footer>
 </body>
 </html>
