--- a/html/golpes.html
+++ b/html/golpes.html
@@ -21,10 +21,10 @@
                </ul>
          </nav>
     </header>
-    <!--<footer style="color: white;">
+    <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
         <p>© Todos los derechos recervados</p>
-    </footer>-->
+    </footer>
 </body>
 </html>
