--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
                </ul>
          </nav>
     </header>
-    <!--<article>
+    <article>
         <h1 style="text-align: center;color: white;">GTAV Online</h1>
         <h2 style="text-align: left;color: white;">
             Grand Theft Auto V (abreviado como GTA V o GTA 5) es un videojuego de acción-aventura de mundo abierto desarrollado por el estudio Rockstar North y distribuido por Rockstar Games. Fue lanzado el 17 de septiembre de 2013 para las consolas PlayStation 3 y Xbox 360.4​ Posteriormente, fue lanzado el 18 de noviembre de 2014 para las consolas de nueva generación PlayStation 4 y Xbox One con mejores gráficos y novedades interesantes como la vista en primera persona y finalmente para Microsoft Windows el 14 de abril de 2015. Se trató del primer gran título en la serie Grand Theft Auto desde el lanzamiento de Grand Theft Auto IV en 2008, el cual estrenó la «era HD» de la mencionada serie de videojuegos
@@ -32,6 +32,6 @@
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
         <p>© Todos los derechos recervados</p>
-    </footer>-->
+    </footer>
 </body>
 </html>
