--- a/html/negocios.html
+++ b/html/negocios.html
@@ -7,9 +7,9 @@
 </head>
 <body style="background-image: url(../imagenes/Moteros.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/negocios.jpg" width="500">
+        <img src="../imagenes/GTA_V_logo.png">
          <nav>
-               <ul style="color: yellowgreen;">
+               <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
                     <li><a href="autos.html" style="color: turquoise;">Autos</a></li>
                     <li><a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a></li>
@@ -18,11 +18,229 @@
                     <li><a href="Noticias.html" style="color: turquoise;">Noticias</a></li>
                     <li><a href="actividades.html" style="color: turquoise;">Actividades</a> </li>
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
-               </ul>
+               </ul>-->
+               <a href="index.html" style="color: turquoise;">Principal</a>
+               <a href="autos.html" style="color: turquoise;">Autos</a></<a>
+               <a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a>
+               <a href="golpes.html" style="color: turquoise;">Golpes</a> 
+               <a href="negocios.html" style="color: turquoise;">Negocios</a> 
+               <a href="Noticias.html" style="color: turquoise;">Noticias</a>
+               <a href="actividades.html" style="color: turquoise;">Actividades</a> 
+               <a href="eventos.html" style="color: turquoise;">Eventos</a>
          </nav>
     </header>
+    <br>
+    <audio controls autoplay loop id="header-video">
+        <source src="../audios/musica-para-motociclistas-9.mp3" type="audio/mpeg">
+    </audio>
+    <section>
+        <h2 style="color: darkturquoise;">Gráficos y guía de ganancias empresariales de BTA Online Bikers</h2>
+        <article style="color: white;">
+            <h3>Si bien las empresas introducidas en el DLC de Bikers de GTA Online no son las empresas más rentables en el juego y vienen con el desafortunado efecto secundario de recibir llamadas telefónicas constantes de LJT quejándose sobre su ética de trabajo, son una excelente manera de obtener un poco de esfuerzo efectivo mientras trabaja en trabajos más eficientes. Echa un vistazo a nuestra guía completa de GTA Online para ganar dinero sobre dónde encajan las empresas Bikers en el esquema de las cosas.</h3>
+            <h3>Sin embargo, maximizar las ganancias de las empresas es clave para que sean una búsqueda que valga la pena, y hay muchos datos que el juego no te dice por adelantado. Es posible que su forma de administrar sus negocios necesite mucha racionalización y optimización, pero ni siquiera lo sabe y, como resultado, las ganancias podrían mejorar significativamente.</h3>
+            <h3>Un gráfico útil elaborado por el usuario de Reddit Echobox419 ha reiterado que el bloqueo de cocaína es el negocio más rentable, sin embargo, también se han revelado algunas complejidades adicionales de la mecánica comercial. Al igual que en el caso de nuestra Guía de durabilidad del vehículo, algunos de los sistemas subyacentes aquí no son aparentes para el jugador.</h3>
+            <h3>Las fracciones se suman a un número entero en 5 barras en cada caso, sin embargo, en el medio siempre se crea un exceso de producto, y ese exceso se desperdicia cada vez que cierra un negocio. Tenga en cuenta que estos números provienen de empresas con atributos de Equipo y Personal totalmente actualizados, por lo que las empresas no actualizadas pueden arrojar resultados variados.</h3>
+        </article>
+    </section>
+    <br>
+    <section>
+        <article style="color: white;">
+            <h2 style="color: darkturquoise;">Jugando con amigos</h2>
+            <h3>Las cosas cambian significativamente cuando se juega con amigos. Dado que comprar suministros solo le permitirá llenar parcialmente sus barras, una buena técnica aquí es comprar tanto como pueda y luego robar el resto para obtener el máximo rendimiento. Luego, salga y realice otras actividades (las misiones de Importar / Exportar también son más rentables y más rápidas cuando se hacen en grupo) mientras los productos se cocinan, y luego vende todo de una vez por un gran pago.</h3>
+        </article>
+    </section>
+    <br>
+    <section>
+        <article style="color: white;"> 
+            <h2 style="color: darkturquoise;">La cocaína es el rey</h2> 
+            <h3>El cuadro creado por Echobox419 hace todos los cálculos para nosotros y muestra que un conjunto completo de productos de cocaína se vende por la mejor cantidad tanto en el caso de suministros robados como comprados, aunque el dinero falsificado con suministros robados supera a la cocaína con los suministros comprados. La ganancia máxima absoluta que puede obtener es de GTA $ 112,000 con inversión cero y GTA $ 93,000 con suministros comprados. La cocaína también es el negocio de producción más rápida, con una barra de suministros que se produce en solo 24 minutos, y el lote completo se completa en 2 horas. Las otras empresas tardan alrededor de media hora por un solo lote, y esos minutos adicionales suman a la larga.</h3>
+            <br>
+            <h2 style="color: darkturquoise;">Ignorar falsificación de documentos</h2>
+            <h3>El negocio de falsificación de documentos es, con mucho, el menos rentable, tanto que hacer una venta en la región local con suministros comprados te deja con una pérdida neta en lugar de cualquier tipo de ganancia. Sería prudente ignorar ese tipo de negocio por completo, incluso si decide tomar la ruta de operar múltiples negocios.</h3>
+            <br>
+            <h2 style="color: darkturquoise;">Mezclándolo</h2>
+            <h3>Sobre el tema de múltiples negocios, es una opción que puede parecer más atractiva para los jugadores a los que les disgustan las misiones de Importar / Exportar hasta el punto de no querer jugar en absoluto. En términos generales, las misiones de Importación / Exportación son más riesgosas, ya que requieren que estés en un lobby público abriéndote a PVP. Sin embargo, si te retrasas en tu propio lobby público, el juego aumentará la resistencia de los NPC para hacerte las cosas más difíciles.</h3>
+            <h3>Las misiones de entrega de productos, e incluso las misiones de robo de suministros, son bastante simples por otro lado. Se pueden hacer en vestíbulos privados y el juego no aumenta la dificultad en estos casos, por lo que si está ejecutando solo y encuentra que Importar / Exportar no es su taza de té, administrar múltiples negocios es una excelente manera de hacer algo Buen dinero en efectivo en GTA Online.</h3>
+        </article>
+    </section>
+    <br>
+    <section>
+        <h1 style="color: darkturquoise;">Tabla</h1>
+        <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;}
+            .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+            .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+            .tg .tg-46ru{background-color:#96fffb;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-t9ae{background-color:#deace7;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-opee{font-weight:bold;background-color:#ffffc7;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-r11b{background-color:#6434fc;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-5ztr{font-weight:bold;background-color:#cbcefb;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-00y8{background-color:#9a23ae;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-c4ww{background-color:#cbcefb;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-kndx{background-color:#34ff34;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-7od5{background-color:#9aff99;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-dvid{font-weight:bold;background-color:#efefef;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-y698{background-color:#efefef;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-6cdm{background-color:#efefef;color:#3166ff;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-eix7{background-color:#f8ff00;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-ncd7{background-color:#ffffc7;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-mfhl{background-color:#ffffc7;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-fymr{font-weight:bold;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-4m7p{background-color:#9aff99;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-kbue{font-weight:bold;background-color:#9aff99;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-i25s{background-color:#00d2cb;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-gdc4{background-color:#96fffb;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-ntfp{font-weight:bold;background-color:#96fffb;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-61xu{background-color:#cbcefb;border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-8494{background-color:#deace7;border-color:inherit;text-align:center;vertical-align:top}
+            .tg .tg-yqx5{font-weight:bold;background-color:#deace7;border-color:inherit;text-align:left;vertical-align:top}
+            </style>
+            <table class="tg">
+              <tr>
+                <th class="tg-y698"><span style="font-weight:bold">Businnes Type</span></th>
+                <th class="tg-y698"><span style="color:rgb(49, 102, 255)">amt. of supplies</span></th>
+                <th class="tg-6cdm">1 bar</th>
+                <th class="tg-6cdm">2 bar</th>
+                <th class="tg-6cdm">3 bar</th>
+                <th class="tg-6cdm">4 bar</th>
+                <th class="tg-6cdm">5 bar</th>
+                <th class="tg-dvid">Time req. to process<br><br>1 bar of Supplies</th>
+                <th class="tg-dvid">Time req. to process 1 full<br>round of Purchassed Supplies</th>
+                <th class="tg-dvid">Purchased Supplies fill<br>Bisines to (x)% capacity</th>
+                <th class="tg-dvid" colspan="2">Profit made from 1 round of<br>Puncharsed Supplies (after cost)</th>
+              </tr>
+              <tr>
+                <td class="tg-eix7"><span style="font-weight:bold">Document Forgery</span></td>
+                <td class="tg-ncd7">#of product units <br>sell price</td>
+                <td class="tg-ncd7">10<br>$14k</td>
+                <td class="tg-ncd7">20<br>$28k</td>
+                <td class="tg-ncd7">30<br>$42k</td>
+                <td class="tg-ncd7">40<br>$56k</td>
+                <td class="tg-ncd7">50<br>$70k</td>
+                <td class="tg-mfhl">30 min.</td>
+                <td class="tg-mfhl">2 hours, 30 minutes</td>
+                <td class="tg-mfhl">83.30 %</td>
+                <td class="tg-ncd7">local sale<br>remote sale</td>
+                <td class="tg-opee">-$5k (loss)<br>$30 k</td>
+              </tr>
+              <tr>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-c3ow"></td>
+                <td class="tg-c3ow"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-fymr"></td>
+              </tr>
+              <tr>
+                <td class="tg-kndx"><span style="font-weight:bold">Weed Farm</span></td>
+                <td class="tg-7od5">#of sellable units<br>#of actual units<br>sell price</td>
+                <td class="tg-7od5">7<br>7.2<br>$14.7k</td>
+                <td class="tg-7od5">14<br>14.4<br>$29.4k</td>
+                <td class="tg-7od5">21<br>21.6<br>$44.1k</td>
+                <td class="tg-7od5">28<br>28.8<br>$58.8k</td>
+                <td class="tg-7od5">36<br>36<br>$75.6k</td>
+                <td class="tg-4m7p">29 min</td>
+                <td class="tg-4m7p">2 hours, 24 minutes </td>
+                <td class="tg-4m7p">45 %</td>
+                <td class="tg-7od5">local sale<br>remote sale</td>
+                <td class="tg-kbue">$600 (breakeven)<br>$38.4k</td>
+              </tr>
+              <tr>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-c3ow"></td>
+                <td class="tg-c3ow"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-fymr"></td>
+              </tr>
+              <tr>
+                <td class="tg-i25s"><span style="font-weight:bold">Counterfeit Cash</span></td>
+                <td class="tg-46ru">#of product units <br>sell price</td>
+                <td class="tg-46ru">4<br>$19k</td>
+                <td class="tg-46ru">8<br>$39.2k</td>
+                <td class="tg-46ru">12<br>$58.8k</td>
+                <td class="tg-46ru">16<br>$78.4k</td>
+                <td class="tg-46ru">20<br>$98k</td>
+                <td class="tg-gdc4">32 min</td>
+                <td class="tg-gdc4">2 hours, 40 minutes</td>
+                <td class="tg-gdc4">50 %</td>
+                <td class="tg-46ru">local sale<br>remote sale</td>
+                <td class="tg-ntfp">$ 23k<br>$ 72 k</td>
+              </tr>
+              <tr>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-c3ow"></td>
+                <td class="tg-c3ow"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-fymr"></td>
+              </tr>
+              <tr>
+                <td class="tg-r11b"><span style="font-weight:bold">Meth Lab</span></td>
+                <td class="tg-61xu">#of sellable units<br>#of actual units<br>sell price</td>
+                <td class="tg-61xu">1<br>1.8<br>$11.9k</td>
+                <td class="tg-61xu">3<br>3.2<br>$35.7k</td>
+                <td class="tg-61xu">4<br>4.8<br>$47.6k</td>
+                <td class="tg-61xu">6<br>6.4<br>$71.4k</td>
+                <td class="tg-61xu">8<br>8<br>$95.2k</td>
+                <td class="tg-c4ww">29 min</td>
+                <td class="tg-c4ww">2 hours, 24 minutes</td>
+                <td class="tg-c4ww">40 %</td>
+                <td class="tg-61xu">local sale<br>remote sale</td>
+                <td class="tg-5ztr">$20.2k<br>$67.8k</td>
+              </tr>
+              <tr>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-c3ow"></td>
+                <td class="tg-c3ow"></td>
+                <td class="tg-0pky"></td>
+                <td class="tg-fymr"></td>
+              </tr>
+              <tr>
+                <td class="tg-00y8"><span style="font-weight:bold">Cocaine Factory</span></td>
+                <td class="tg-t9ae">#of sellable units<br>#of actual units<br>sell price</td>
+                <td class="tg-t9ae">0<br>0.8<br>$0</td>
+                <td class="tg-t9ae">1<br>1.6<br>$28k</td>
+                <td class="tg-t9ae">2<br>2.4<br>$48k</td>
+                <td class="tg-t9ae">3<br>3.2<br>$84k</td>
+                <td class="tg-t9ae">4<br>4<br>$112k</td>
+                <td class="tg-8494">24 min</td>
+                <td class="tg-8494">2 hours</td>
+                <td class="tg-8494">40%</td>
+                <td class="tg-t9ae">local sale<br>remote sale</td>
+                <td class="tg-yqx5">$37k<br>$93k</td>
+              </tr>
+        </table>
+    </section>
     <footer style="color: white;">
-        <p>Call: <a href="tel:0990791348" style="color: w;">+593 0990791348</a></p>
+        <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
         <p>© Todos los derechos recervados</p>
     </footer>
