--- a/html/videosDeLaComunidad.html
+++ b/html/videosDeLaComunidad.html
@@ -7,9 +7,9 @@
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/videos.png">
+        <img src="../imagenes/GTA_V_logo.png">
          <nav>
-               <ul style="color: yellowgreen;">
+               <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
                     <li><a href="autos.html" style="color: turquoise;">Autos</a></li>
                     <li><a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a></li>
@@ -18,14 +18,40 @@
                     <li><a href="Noticias.html" style="color: turquoise;">Noticias</a></li>
                     <li><a href="actividades.html" style="color: turquoise;">Actividades</a> </li>
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
-               </ul>
+               </ul>-->
+               <a href="index.html" style="color: turquoise;">Principal</a>
+               <a href="autos.html" style="color: turquoise;">Autos</a></<a>
+               <a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a>
+               <a href="golpes.html" style="color: turquoise;">Golpes</a> 
+               <a href="negocios.html" style="color: turquoise;">Negocios</a> 
+               <a href="Noticias.html" style="color: turquoise;">Noticias</a>
+               <a href="actividades.html" style="color: turquoise;">Actividades</a> 
+               <a href="eventos.html" style="color: turquoise;">Eventos</a>
          </nav>
     </header>
     <section>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/K8mR9H804-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <article id>
+            <h2 style="color: chocolate;">Videos de la comunidad</h2>
+            <h1 style="color: white;">Estos videos son realizados por la comunidad de GTA online para demostrar el como se convive dentro del videojuego</h1>
+        </article>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/K8mR9H804-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2vW58ewyP2k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="279" height="115" src="https://www.youtube.com/embed/MShjruLMh2I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="279" height="115" src="https://www.youtube.com/embed/irN6bn1-e44" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="278" height="115" src="https://www.youtube.com/embed/BrqE_hFW9TA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="278" height="115" src="https://www.youtube.com/embed/6QpKlw5Iu9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section>
-        
+        <article>
+            <h2 style="color: chocolate;">Cinematicas del GTA</h2>
+            <h1 style="color: white;">En esta seccion podras disfrutar de tus cinematicas favoritas</h1>
+        </article>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/LqDAPKDDpJA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Ge4TzpmGDXo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="279" height="115" src="https://www.youtube.com/embed/N-xHcvug3WI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="279" height="115" src="https://www.youtube.com/embed/aoOQuCXvFM0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="278" height="115" src="https://www.youtube.com/embed/7rEuY4x4zU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="278" height="115" src="https://www.youtube.com/embed/2eaG7MVaqD8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
