--- a/html/autos.html
+++ b/html/autos.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autos</title>
 </head>
-<body style="background-image: url(../imagenes/fondoautos1.jpg);background-size: cover;">
+<body style="background-image: url(../imagenes/autosFon.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/autos.jpg">
+        <img src="../imagenes/GTA_V_logo.png">
          <nav>
-               <ul style="color: yellowgreen;">
+               <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
                     <li><a href="autos.html" style="color: turquoise;">Autos</a></li>
                     <li><a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a></li>
@@ -18,12 +18,20 @@
                     <li><a href="Noticias.html" style="color: turquoise;">Noticias</a></li>
                     <li><a href="actividades.html" style="color: turquoise;">Actividades</a> </li>
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
-               </ul>
+               </ul>-->
+                <a href="index.html" style="color: turquoise;">Principal</a>
+                <a href="autos.html" style="color: turquoise;">Autos</a></<a>
+                <a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a>
+                <a href="golpes.html" style="color: turquoise;">Golpes</a> 
+                <a href="negocios.html" style="color: turquoise;">Negocios</a> 
+                <a href="Noticias.html" style="color: turquoise;">Noticias</a>
+                <a href="actividades.html" style="color: turquoise;">Actividades</a> 
+                <a href="eventos.html" style="color: turquoise;">Eventos</a>
          </nav>
     </header>
     <section>
         <article style="color: white;">
-            <h1 style="text-align: center;">Autos de lujo</h1>
+            <h3 style="text-align: center;">Autos de lujo</h3>
             <p>Hay vehículos exclusivos en el modo individual que no hacen aparición en GTA Online y viceversa. Como también se han añadido una gran cantidad de deportivos como el Jester y superdeportivos como el Zentorno. Hasta la Actualización Dinero Sucio Parte 2 los siguientes vehículos que serán lanzados ya no estarán disponibles en modo campaña.
         </article>
     </section>
@@ -37,9 +45,21 @@
         <img src="../imagenes/Zorrusso.png" width="250">
         <img src="../imagenes/PR4.png" width="250">
         <img src="../imagenes/OppressorMkII.png" width="250">
-        <br>
-        <article style="color:white;">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, maxime. Dolor error, voluptatum praesentium doloremque voluptatibus harum laborum ipsam sunt dignissimos iste quisquam sed impedit laboriosam iure laudantium eligendi! At expedita eaque impedit laudantium beatae error suscipit voluptas! Nihil autem consectetur perspiciatis debitis adipisci aperiam accusamus, recusandae deserunt et labore consequatur quos enim voluptate illo, voluptatum ut. Amet repellendus error nostrum aspernatur repellat doloremque mollitia incidunt nobis enim veritatis ut id ullam at laborum illum aliquid sunt, cumque perspiciatis sapiente. Accusantium expedita dolorum quidem repellat facilis assumenda, error accusamus reprehenderit, enim sed quia excepturi quos quam molestiae vero porro consequuntur?</h1>
+        <img src="../imagenes/SpecterCustom.png" width="250">
+        <img src="../imagenes/Vagner.png" width="250">
+    </section>
+    <section style="background-color:bisque;">
+        <article>
+            <h3>Algunas marcas reconocidas dentro del juego</h3>
+            <h3>Lampadati</h3>
+            <h1>«Una empresa italiana de coches de lujo fundada en Polonia a principios del siglo XX y que se dedicó a los coches de carreras. Tras no conseguir ganar muchos grandes premios, se centraron en fabricar coches deportivos que impresionan a las mujeres casquivanas. Esto si que lo han conseguido. Y muy bien por cierto.»</h1>
+            <br>
+            <h3>Windsor</h3>
+            <h1>«Al desdibujar los límites entre un automóvil y una mansión de un aristócrata inglés, este coche podría darle un aura de clase y buen gusto hasta a un fan del nu metal. El inútil fabricante creó una aerodinámica tan patética y un chasis tan pesado que este motor de doble turbo apenas da para manejar despacio mientras eliges a una prostituta, pero eso es parte de (o todo) su encanto británico.»</h1>
+            <br>
+            <h3>Zion Cabrio</h3>
+            <h1>«Ingeniería y diseño alemanes tomados muy, muy en serio. Se garantiza que este modelo de Zion descapotable le levantará el peluquín a cualquier ejecutivo sénior.»</h1>
+            <br>
         </article>
     </section>
     <footer style="color: white;">
