--- a/html/golpes.html
+++ b/html/golpes.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golpes</title>
 </head>
-<body style="background-image: url(../imagenes/golpes.jpg);background-size: cover;">
+<body style="background-image: url(../imagenes/golpeDinerito.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/golpesfon.jpg" width="400" height="200">
+        <img src="../imagenes/GTA_V_logo.png">
          <nav>
-               <ul style="color: yellowgreen;">
+               <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
                     <li><a href="autos.html" style="color: turquoise;">Autos</a></li>
                     <li><a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a></li>
@@ -18,9 +18,42 @@
                     <li><a href="Noticias.html" style="color: turquoise;">Noticias</a></li>
                     <li><a href="actividades.html" style="color: turquoise;">Actividades</a> </li>
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
-               </ul>
+               </ul>-->
+               <a href="index.html" style="color: turquoise;">Principal</a>
+               <a href="autos.html" style="color: turquoise;">Autos</a></<a>
+               <a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a>
+               <a href="golpes.html" style="color: turquoise;">Golpes</a> 
+               <a href="negocios.html" style="color: turquoise;">Negocios</a> 
+               <a href="Noticias.html" style="color: turquoise;">Noticias</a>
+               <a href="actividades.html" style="color: turquoise;">Actividades</a> 
+               <a href="eventos.html" style="color: turquoise;">Eventos</a>
          </nav>
     </header>
+    <br>
+    <audio controls autoplay loop id="header-video">
+        <source src="../audios/rain.mp3" type="audio/mpeg">
+    </audio>
+    <section>
+        <article>
+            <h3 style="color: bisque">GOLPES</h3>
+            <h1 style="color: bisque">Una experiencia cooperativa para 4 jugadores en Grand Theft Auto Online que ofrece la posibilidad de agruparse para llevar a cabo una serie de intensos golpes en varias fases, con asaltos y atracos por todo Los Santos y el condado de Blaine.</h1>
+        </article>
+        <article>
+            <img src="../imagenes/planeaEjecuta.jpg">
+            <h3 style="color: bisque">PLANEA Y EJECUTA</h3>
+            <h1 style="color: bisque">Los golpes en línea abarcan numerosas misiones que introducen nuevos elementos de juego, vehículos, armas y situaciones para poner a prueba las habilidades de los equipos: desde el hackeo de ordenadores, hasta la infiltración, pasando por la precisión en la conducción, la habilidad como piloto, la puntería, el paracaidismo y muchas más cosas.</h1>
+        </article>
+        <article>
+            <img src="../imagenes/equipos.jpg">
+            <h3 style="color: bisque">EQUIPOS DE 4 JUGADORES, 4 MANERAS DE JUGAR</h3>
+            <h1 style="color: bisque;">Elegid vuestros papeles y planead la estrategia para cada fase. La comunicación y la coordinación serán claves. Algunas misiones requerirán que trabajéis unidos, mientras que otras separarán a los miembros para completar objetivos clave. Vuelve a jugar cada golpe desde diferentes perspectivas de la acción y completa los desafíos de élite para conseguir más dinero.</h1>
+        </article>
+        <article>
+            <img src="../imagenes/reunete.jpg">
+            <h3 style="color: bisque;">REÚNE A TU EQUIPO</h3>
+            <h1 style="color: bisque;">Crea una Crew o únete a las que ya hay para ganar recompensas adicionales en RP mientras juegas.</h1>
+        </article>
+    </section>
     <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
