culminacion de la pagina de noticias

--- a/html/Noticias.html
+++ b/html/Noticias.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias</title>
 </head>
-<body style="background-image: url(../imagenes/losSantos.jpg);background-size: cover;">
+<body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/noticias2.jpg" >
+        <img src="../imagenes/GTA_V_logo.png"  alt="" width="500" height="500">
+        <img src="../imagenes/noticias2.jpg"  alt="" width="800" height="500">
          <nav>
                <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
@@ -29,6 +30,45 @@
                <a href="eventos.html" style="color: turquoise;">Eventos</a>
          </nav>
     </header>
+    <br>
+    <section>
+        <article>
+            <img src="../imagenes/arenaWar.png" alt="">
+            <aside>
+                <h1 style="color: white;">Triple de GTA$ y RP en Motor Wars del
+                    26 de marzo al 1 de abril</h1>
+                <h1 style="color: white;">Rebaja del 60 % en el Mammoth Avenger hasta el 1 de abril en Warstock Cache & Carry</h1>
+                <h1 style="color: white;">Además, triple de recompensas en Motor Wars y descuentos en instalaciones, vehículos y muchas cosas más</h1>
+            </aside>
+        </article> 
+    </section>
+    <section>
+        <article style="color: white;">
+            <img src="../imagenes/instalaciones.png" alt="">
+            <aside>
+                <h1>50 % de descuento en instalaciones</h1>
+            </aside>
+            <img src="../imagenes/desIns.png" alt="">
+            <aside>
+                <h1>60 % de descuento en modificaciones de instalaciones</h1>
+            </aside>
+            <img src="../imagenes/tallerDes.png" alt="">
+            <aside>
+                <h1>60 % de descuento en el taller del vehículo armado Avenger</h1>
+            </aside>
+        </article>
+    </section>
+    <br>
+    <section>
+        <article style="color: white;">
+            <h1>Bonificaciones y ventajas de Twitch Prime</h1>
+            <img src="../imagenes/juegos.png" alt="">
+            <aside>
+                Además de un descuento adicional del 10 % que se suma a todos los detallados previamente, los jugadores de GTA Online que vinculen su cuenta de Twitch Prime a la del Social Club de Rockstar Games podrán conseguir el salón recreativo Pixel Pete's de Paleto Bay gratis a través de un reembolso completo del precio base, y una rebaja del 80 % en propiedades del Maze Bank Oeste y en el club nocturno de Misson Row. No olvides visitar Twitch Prime y registrarte si no quieres perderte ninguna de las ventajas futuras.
+            </aside>
+        </article>
+    </section>
+    <hr>
     <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
