--- a/html/actividades.html
+++ b/html/actividades.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/ActividadesLog.jpeg">
+        <img src="../imagenes/ActividadesLog.jpeg" width="500" height="500">
          <nav>
                <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
@@ -29,10 +29,11 @@
                 <a href="eventos.html" style="color: turquoise;">Eventos</a>
          </nav>
     </header>
-    <!--<footer style="color: white;">
+    <hr>
+    <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
         <p>© Todos los derechos recervados</p>
-    </footer>-->
+    </footer>
 </body>
 </html>
