--- a/html/negocios.html
+++ b/html/negocios.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-image: url(../imagenes/Moteros.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/GTA_V_logo.png">
+        <img src="../imagenes/GTA_V_logo.png" width="500" height="500">
          <nav>
                <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
@@ -46,6 +46,7 @@
     <section>
         <article style="color: white;">
             <h2 style="color: darkturquoise;">Jugando con amigos</h2>
+            <img src="../imagenes/amigos.jpg">
             <h3>Las cosas cambian significativamente cuando se juega con amigos. Dado que comprar suministros solo le permitirá llenar parcialmente sus barras, una buena técnica aquí es comprar tanto como pueda y luego robar el resto para obtener el máximo rendimiento. Luego, salga y realice otras actividades (las misiones de Importar / Exportar también son más rentables y más rápidas cuando se hacen en grupo) mientras los productos se cocinan, y luego vende todo de una vez por un gran pago.</h3>
         </article>
     </section>
@@ -53,6 +54,7 @@
     <section>
         <article style="color: white;"> 
             <h2 style="color: darkturquoise;">La cocaína es el rey</h2> 
+            <img src="../imagenes/cocaina.jpg" width="300" height="200">
             <h3>El cuadro creado por Echobox419 hace todos los cálculos para nosotros y muestra que un conjunto completo de productos de cocaína se vende por la mejor cantidad tanto en el caso de suministros robados como comprados, aunque el dinero falsificado con suministros robados supera a la cocaína con los suministros comprados. La ganancia máxima absoluta que puede obtener es de GTA $ 112,000 con inversión cero y GTA $ 93,000 con suministros comprados. La cocaína también es el negocio de producción más rápida, con una barra de suministros que se produce en solo 24 minutos, y el lote completo se completa en 2 horas. Las otras empresas tardan alrededor de media hora por un solo lote, y esos minutos adicionales suman a la larga.</h3>
             <br>
             <h2 style="color: darkturquoise;">Ignorar falsificación de documentos</h2>
@@ -239,6 +241,7 @@
               </tr>
         </table>
     </section>
+    <hr>
     <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
