--- a/html/autos.html
+++ b/html/autos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body style="background-image: url(../imagenes/autosFon.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/GTA_V_logo.png">
+        <img src="../imagenes/GTA_V_logo.png" alt="" width="500" height="500">
          <nav>
                <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
@@ -20,8 +20,8 @@
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
                </ul>-->
                 <a href="index.html" style="color: turquoise;">Principal</a>
-                <a href="autos.html" style="color: turquoise;">Autos</a></<a>
-                <a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a>
+                <a href="autos.html" style="color: turquoise;">Autos</a>
+                <a href="videosDeLaComunidad.html" style="color: turquoise;">Videos</a>
                 <a href="golpes.html" style="color: turquoise;">Golpes</a> 
                 <a href="negocios.html" style="color: turquoise;">Negocios</a> 
                 <a href="Noticias.html" style="color: turquoise;">Noticias</a>
@@ -37,16 +37,16 @@
     </section>
     <br>
     <section>
-        <img src="../imagenes/Emerus-GTAO.png">
-        <img src="../imagenes/Reaper.jpg" width="250">
-        <img src="../imagenes/t20.png">
-        <img src="../imagenes/TyrusV.png" width="250">
-        <img src="../imagenes/Zentorno.png" width="250">
-        <img src="../imagenes/Zorrusso.png" width="250">
-        <img src="../imagenes/PR4.png" width="250">
-        <img src="../imagenes/OppressorMkII.png" width="250">
-        <img src="../imagenes/SpecterCustom.png" width="250">
-        <img src="../imagenes/Vagner.png" width="250">
+        <img src="../imagenes/Emerus-GTAO.png" alt="">
+        <img src="../imagenes/Reaper.jpg" alt="" width="250">
+        <img src="../imagenes/t20.png" alt="">
+        <img src="../imagenes/TyrusV.png" alt="" width="250">
+        <img src="../imagenes/Zentorno.png" alt="" width="250">
+        <img src="../imagenes/Zorrusso.png" alt="" width="250">
+        <img src="../imagenes/PR4.png" alt="" width="250">
+        <img src="../imagenes/OppressorMkII.png" alt="" width="250">
+        <img src="../imagenes/SpecterCustom.png" alt="" width="250">
+        <img src="../imagenes/Vagner.png" alt="" width="250">
     </section>
     <section style="background-color:bisque;">
         <article>
@@ -62,6 +62,7 @@
             <br>
         </article>
     </section>
+    <hr>
     <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
