--- a/html/eventos.html
+++ b/html/eventos.html
@@ -20,8 +20,8 @@
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
                </ul>-->
                <a href="index.html" style="color: turquoise;">Principal</a>
-               <a href="autos.html" style="color: turquoise;">Autos</a></<a>
-               <a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a>
+               <a href="autos.html" style="color: turquoise;">Autos</a>
+               <a href="videosDeLaComunidad.html" style="color: turquoise;">Videos</a>
                <a href="golpes.html" style="color: turquoise;">Golpes</a> 
                <a href="negocios.html" style="color: turquoise;">Negocios</a> 
                <a href="Noticias.html" style="color: turquoise;">Noticias</a>
@@ -29,6 +29,7 @@
                <a href="eventos.html" style="color: turquoise;">Eventos</a>
          </nav>
     </header>
+    <hr>
     <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
