--- a/html/golpes.html
+++ b/html/golpes.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-image: url(../imagenes/golpeDinerito.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/GTA_V_logo.png">
+        <img src="../imagenes/GTA_V_logo.png" width="500" height="500">
          <nav>
                <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
@@ -54,6 +54,7 @@
             <h1 style="color: bisque;">Crea una Crew o únete a las que ya hay para ganar recompensas adicionales en RP mientras juegas.</h1>
         </article>
     </section>
+    <hr>
     <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
