--- a/html/videosDeLaComunidad.html
+++ b/html/videosDeLaComunidad.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/GTA_V_logo.png">
+        <img src="../imagenes/GTA_V_logo.png" width="500" height="500">
          <nav>
                <!--<ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
@@ -53,6 +53,7 @@
         <iframe width="278" height="115" src="https://www.youtube.com/embed/7rEuY4x4zU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <iframe width="278" height="115" src="https://www.youtube.com/embed/2eaG7MVaqD8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
+    <hr>
     <footer style="color: white;">
         <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
         <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">:cpenaf@est.ups.edu.ec</a></p>
