--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
         <img src="../imagenes/GTA_V_logo.png" alt="" width="400" height="500">
         <video  src="../videos/trailerGTA.mp4" width="840" height="480" controls autoplay></video>
          <nav>
-               <!--<ul style="color: yellowgreen;">
+               <ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
                     <li><a href="autos.html" style="color: turquoise;">Autos</a></li>
                     <li><a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a></li>
@@ -19,15 +19,15 @@
                     <li><a href="Noticias.html" style="color: turquoise;">Noticias</a></li>
                     <li><a href="actividades.html" style="color: turquoise;">Actividades</a> </li>
                     <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
-               </ul>-->
-               <a href="index.html" style="color: turquoise;">Principal</a>
+               </ul>
+               <!--<a href="index.html" style="color: turquoise;">Principal</a>
                <a href="autos.html" style="color: turquoise;">Autos</a>
                <a href="videosDeLaComunidad.html" style="color: turquoise;">Videos</a>
                <a href="golpes.html" style="color: turquoise;">Golpes</a> 
                <a href="negocios.html" style="color: turquoise;">Negocios</a> 
                <a href="Noticias.html" style="color: turquoise;">Noticias</a>
                <a href="actividades.html" style="color: turquoise;">Actividades</a> 
-               <a href="eventos.html" style="color: turquoise;">Eventos</a>
+               <a href="eventos.html" style="color: turquoise;">Eventos</a>-->
          </nav>
     </header>
     <article>
